ui/tagging.css
.play-box {
    display: flex;
    margin: auto;
    transition: all 0.2s ease;
    justify-content: center;

    svg {
        transition: all 0.2s ease;
    }

    svg:first-child, svg:last-child {
        margin-block: auto;
        margin-inline: 20px;
    }

    svg:hover {
        transform: scale(1.1);
    }
}

.time-bar {
    width: 100%;
}

.media-box {
    max-width: 500px;
}

input {
    margin-inline: 10px;
}

label ~ input {
    margin-left: 0;
}

.tag {
    border-radius: 5px;
    min-height: 30px;
    width: max-content;
    max-width: 400px;
    background-color: blue;
    color: white;
    font-weight: 600;
    padding: 5px 10px;
    margin: 5px;
    display: inline-flex;
    transition: all ease 0.2s;

    button {
        padding: 0;
        margin-left: 10px;
        font-size: 20px;
        color: white;
        font-weight: 600;
        margin-top: -3.5px;
        border: 0;
        background: transparent;
        cursor: pointer;
        transition: all ease 0.2s;
    }
}

.tag:hover:not(:disabled) {
    transform: scale(1.1);
    cursor: pointer;
}

#current-tags-box .tag:hover {
    transform: unset;
    cursor: not-allowed;
}

.tag.a {
    outline: 2px solid var(--green);
    border: 2px solid white;
}

.tag button:hover {
    color: red;
}

.tag button.edit:hover {
    color: rgb(0, 255, 0);
}

.tag:disabled {
    cursor: not-allowed;
    background-color: rgb(0, 0, 147);
}

a#next-track, a#previous-track {
    border: 2px solid var(--accent-color);
    border-radius: 5px;
    padding: 5px 3px 0px 5px;
    background: linear-gradient(-45deg, var(--green), var(--yellow));
    color: var(--accent-color);
}

a#next-track {
    padding-right: 7px;
}

#parent {
    display: flex;
    #left-pane, #right-pane {
        margin-left: -8px;
        margin-top: -8px;
        padding-left: 8px;
        > *:first-child {
            margin-top: 0;
        }
        flex: 1;
        min-height: calc(100dvh - 16px); /*body has default styling of 8px margin*/
    }

    #right-pane {
        border-left: 3px dashed var(--accent-color);
        padding-left: 5px;
    }
}

form.input-form {
    border-bottom: 3px dashed var(--accent-color);
    width: calc(100% - 16px);
    margin-left: -8px;
    padding-inline: 8px;
}

#left-pane summary {
    margin-top: 20px;
}

